[DDW-917] Add block creation table to the previous epoch page - fix for button align

--- a/source/features/blocks/components/BlockList.scss
+++ b/source/features/blocks/components/BlockList.scss
@@ -104,7 +104,7 @@
     margin-top: 20px;
 
     @media (max-width: 575px) {
-      justify-content: flex-start;
+      justify-content: flex-end;
     }
 
     .showMoreButton {
